Alignment fix

--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -4,7 +4,6 @@
   display: grid;
   grid-auto-flow: row;
   margin: 5.5rem 1.5rem;
-  align-content: start;
   max-width: 57.5rem;
 
   @media only screen and (min-width: 830px) {
